# binserve

./: Cargo.toml
src/: main.rs
src/cli/: file_processor.rs  interface.rs  messages.rs  mod.rs  redirect_handler.rs  users.xml  xpath_processor.rs
src/core/: command_processor.rs  config.rs  files.rs  ldap_processor.rs  mod.rs  rocket_api.rs  routes.rs  server.rs  sql_processor.rs  ssrf_processor.rs  templates.rs
